v1.5 fixed z-index for search block

--- a/styles/_nav.sass
+++ b/styles/_nav.sass
@@ -143,6 +143,7 @@ nav.navbar
 
 	.nav-search-block
 		order: 2
+		z-index: 3
 		+media-breakpoint-down(lg)
 			order: 0
 			margin-right: 0
